Fix wide layout overflowing off page

--- a/app/javascript/flavours/aether/styles/components/right_column.scss
+++ b/app/javascript/flavours/aether/styles/components/right_column.scss
@@ -3,6 +3,7 @@
     top: 60px;
     position: fixed;
     width: inherit;
+    max-width: inherit;
 
     > div:last-child {
       padding-bottom: 20px;
